--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        
+<div class="Desktop"> 
     <header>
         <h1>Portfolio</h1>
         <nav>
@@ -52,19 +52,13 @@
     <section id="skills">
         <div class="skills-subhead"><h2>Skills</h2></div>
         <div class="skills-list">
-            <div class="skill-box box1"></div>
-            <div class="skill-box box2"></div>
-            <div class="skill-box box3"></div>
-            <div class="skill-box box4"></div>
-            <div class="skill-box box5"></div>
+            <img src="imgs/html png.png" alt="">
+            <img src="imgs/css png.png" alt="">
+            <img src="imgs/js png.png" alt="">
+            <img src="imgs/c png.png" alt="">
+            <img src="imgs/py png.png" alt="">
         </div>
-
         <div class="skills-list">
-            <div class="skill-box box6"></div>
-            <div class="skill-box box7"></div>
-            <div class="skill-box box8"></div>
-            <div class="skill-box box9"></div>
-            <div class="skill-box box10"></div>
         </div>
     </section>
 
@@ -128,6 +122,49 @@
 
     </footer>
 
+</div>
 
+<div class="Mobile">
+            
+    <header>
+        <h1>Portfolio</h1>
+    </header>
+
+    <section id="hero">
+        <div class="hero_info">
+        <h2> HI, I'm</h2>
+        <h3> Kadaparthi Saikiran </h3>
+        <p>Aspiring Web Developer and Designer</p>
+        </div>
+        <div class="photohero"> </div>
+    </section>
+
+    <section id="about">
+        <img src="Me_about.jpg" alt="Img">
+        <div class="about-bottom">
+            <div id="about1"><h2 id="abouth2">About</h2> <h2>Me</h2></div>
+            <div> <h2 class="name">I’m Saikiran Kadaparthi </h2></div>
+            <div> <h3 class="role" >Full Stack Developer </h3></div>
+            <p>A passionate Full-Stack developer from [Your City, Country],currently diving deep into building dynamicand responsive web applications. I specialize in developing end-to-end solutions using the latest webtechnologies. Constantly learning, building, and challenging myself with full-stack projects.</p>
+            <div class="contact"> <p>📧 Email: saikirankadaparthi2006@gmail.com</p> <p>📍 Location: Hyderabad, India – 500079]</p></div>
+        </div>
+    </section>
+
+    <section id="skills">
+        <div class="skills-subhead"><h2>Skills</h2></div>
+        <div class="skills-list">
+            <img src="imgs/html png.png" alt="">
+            <img src="imgs/css png.png" alt="">
+            <img src="imgs/js png.png" alt="">
+        </div>
+
+        <div class="skills-list">
+            <img src="imgs/py png.png" alt="">
+            <img src="imgs/c png.png" alt="">
+        </div>
+    </section>
+
+
+</div>
 </body>
 </html>
